# pse-forums

./: .biome.jsonc  .dockerignore  .dprint.jsonc  .gitignore  .justfile  .lefthook.yml  .prettierrc.toml  .tasks copy.md  .typos.toml  Cargo.toml  README.md  docker-compose.backup.yml  docker-compose.yml  down  loki-config.yaml  mise.toml  package-lock.json  package.json  promtail-config.yaml  start  tsconfig.json  up  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
.mise-tasks/: clean  db-reset  down  post-gen-rs  start  up
apps/api/: .gitignore  Dockerfile  package.json  tsconfig.json
apps/api/src/: index.ts
apps/client/: Dockerfile  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
apps/client/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  settings.ts
apps/client/src/components/: Accordion.tsx  ActiveUsersList.tsx  AppSidebar.tsx  AuthWrapper.tsx  Avatar.tsx  Comment.tsx  Content.tsx  CreateGroup.tsx  FieldInfo.tsx  Header.tsx  InnsList.tsx  Layout.tsx  LeftSidebar.tsx  MainLayout.tsx  ModeToggle.tsx  PageContent.tsx  PostCard.tsx  Profile.tsx  SearchBar.tsx  Signout.tsx  VersionDetail.tsx  index.ts
apps/client/src/contexts/: GlobalContext.ts  GlobalContext.tsx
apps/client/src/hooks/: use-mobile.tsx  useAuth.ts  useAuth.tsx  useLogout.tsx  (+4 more)
apps/freedit/: Cargo.toml  README.md
apps/freedit/.cargo/: config.toml
apps/freedit/src/: config.rs  main.rs
apps/freedit/templates/: error.html  feed_add.html  feed_read.html  inbox.html  inn.html  inn_edit.html  inn_list.html  post_edit.html  preview.html  show_recovery.html  signin.html
apps/server/: Cargo.toml  Dockerfile  fly.dev.toml
apps/server/api/: Cargo.toml
apps/server/api/src/: auth.rs  comment.rs  context.rs  cookie.rs  dtos.rs  group.rs  lib.rs  post.rs  profile.rs  router.rs  rspc.rs  user.rs
apps/server/api/src/auth/: dtos.rs  router.rs
apps/server/api/src/auth/dtos/: session.rs  signin.rs  signup.rs
apps/server/api/src/comment/: dtos.rs  router.rs
apps/server/api/src/dtos/: auth.rs  comment.rs  group.rs  post.rs  profile.rs  user.rs
apps/server/api/src/group/: dtos.rs  router.rs
apps/server/api/src/post/: dtos.rs  router.rs
apps/server/api/src/profile/: dtos.rs  router.rs
apps/server/api/src/routers/: auth.rs  comment.rs  group.rs  post.rs  profile.rs  user.rs
apps/server/api/src/user/: dtos.rs  router.rs
apps/server/api/src/users/: dtos.rs  handlers.rs
apps/server/api/test/integration/: auth.hurl  comment.hurl  group.hurl  post.hurl  profile.hurl  user.hurl
apps/server/crates/api/: Cargo.toml
apps/server/crates/api/src/: error.rs  lib.rs  state.rs
apps/server/crates/api/src/controller/: user.rs
apps/server/crates/api/src/dto/: user.rs
apps/server/crates/infra/: Cargo.toml
apps/server/crates/infra/src/: config.rs  consts.rs  db.rs  error.rs  lib.rs
apps/server/crates/infra/src/db/: utils.rs
apps/server/crates/infra/src/repository/: site_config.rs  user.rs
apps/server/crates/server/: Cargo.toml
apps/server/crates/server/src/: app_router.rs  main.rs  router.rs
apps/server/crates/server/static/css/: bulma-list.css  main.css
apps/server/crates/server/static/js/: encoding-helper.js  encryption-helper.js
apps/server/crates/server/templates/: upload.html  user.html
apps/server/crypto/: Cargo.toml
apps/server/db/: Cargo.toml  migrate.sh  schema.prisma
apps/server/db/migrations/1_create_user_table/: migration.sql
apps/server/db/migrations/2_create_profile_table/: migration.sql
apps/server/db/migrations/3_create_post_table/: migration.sql
apps/server/db/migrations/4_create_comment_table/: migration.sql
apps/server/db/migrations/5_create_group_table/: migration.sql
apps/server/db/migrations/6_create_email_confirmation_table/: migration.sql
apps/server/db/migrations/7_create_bandada_tables/: migration.sql
apps/server/db/migrations/8_handle_new_user/: migration.sql
apps/server/db/migrations/8_handle_new_user_and_group/: migration.sql
apps/server/db/migrations/9_admin_user_and_default_group/: migration.sql
apps/server/db/src/: generated.rs  lib.rs
apps/server/domain/: Cargo.toml
apps/server/domain/src/: about.rs  claim.rs  comment.rs  content.rs  description.rs  email.rs  email_confirmation.rs  error.rs  group.rs  lib.rs  password.rs  post.rs  profile.rs  tags.rs  title.rs  traits.rs  url.rs  user.rs  username.rs  validations.rs
apps/server/domain/src/traits/: verifier.rs
apps/server/domain/src/users/: model.rs
apps/server/infra/: Cargo.toml
apps/server/infra/src/: bandada_admin.rs  comment.rs  email_confirmation.rs  error.rs  group.rs  lib.rs  post.rs  profile.rs  supabase_auth.rs  user.rs  users.rs
apps/server/infra/src/user/: repository.rs
apps/server/infra/src/users/: repository.rs  traits.rs
apps/server/services/: Cargo.toml
apps/server/services/src/: auth.rs  bandada.rs  comment.rs  email_confirmation.rs  error.rs  group.rs  lib.rs  post.rs  profile.rs  user.rs
apps/server/services/src/auth/: crypto.rs  service.rs
apps/server/services/src/bandada/: http_client.rs  service.rs
apps/server/src/: app_router.rs  lib.rs  main.rs
apps/server/templates/: admin_gallery.html  gallery.html  layout.html  notification.html  solo.html  solo_list.html
apps/shared/: .gitignore  package-lock.json  package.json
db/prisma/: Cargo.toml  README.md  schema copy.prisma  schema.prisma
db/prisma/src/: generated.rs
db/supabase/: config.toml
db/supabase/templates/: confirmation.html
docs/: diagram.excalidraw  tdd.md
infra/: Pulumi.yaml  index.ts
infra/resources/: index.ts  route53.ts  ssh-key.ts
infra/resources/lightsail/: index.ts  user-data.sh
prisma/: Cargo.toml  README.md  schema.prisma
prisma/migrations/20250115065724_init/: migration.sql
prisma/migrations/20250115222501_init/: migration.sql
prisma/src/: generated.rs  lib.rs
pulumi/: package.json  tsconfig.json
pulumi/resources/: config.ts
src/: config.rs
supabase/: config.toml
(+230 files in other folders)
