[workspace]
members = [
  "apps/server/api",
  "apps/server/domain",
  "apps/server/infra",
  "apps/server/services",
  "prisma",
]
package = { edition = "2021" }
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.85"
axum = { version = "0.7.9", features = ["json", "macros"] }
derive_more = { version = "1.0.0", features = ["constructor"] }
dotenvy = "0.15.7"
rspc = "0.3.1"
rspc-axum = "0.2.1"
serde = { version = "1.0.217", features = ["derive"] }
specta = "=2.0.0-rc.20"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
