[package]
name = "api"
edition.workspace = true

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "bindings"
path = "src/bin/bindings.rs"

[dependencies]
axum.workspace = true
derive_more.workspace = true
domain = { path = "../domain" }
infra = { path = "../infra" }
prisma = { path = "../../../db/prisma" }
rspc.workspace = true
rspc-axum.workspace = true
serde.workspace = true
services = { path = "../services" }
specta.workspace = true
tokio.workspace = true
tower-http.workspace = true
