[package]
name = "domain"
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
db = { path = "../db" }
nutype.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
struct-convert.workspace = true
thiserror.workspace = true
validator.workspace = true
zxcvbn.workspace = true
