[package]
name = "services"
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
crypto = { path = "../crypto" }
db = { path = "../db" }
derive_more.workspace = true
domain = { path = "../domain" }
infra = { path = "../infra" }
jsonwebtoken.workspace = true
rspc.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
struct-convert.workspace = true
thiserror.workspace = true

[dev-dependencies]
db = { path = "../db" }
prisma-client-rust.workspace = true
tokio.workspace = true
