[package]
name = "api"
edition.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["http1", "http2", "form", "query", "macros", "multipart", "tokio", "json"], default-features = false }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum_garde = { version = "0.20.0", default-features = false, features = ["form"] }
domain = { path = "../domain" }
garde = { version = "0.20.0", features = ["derive"] }
infra = { path = "../infra" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
thiserror = "2.0.10"
